changing http to https

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <body >
     <h1>Basic Aunthentical example</h1>
     <div ng-view></div>
-    <script src="http://code.angularjs.org/1.2.20/angular.js"></script>
-    <script src="http://code.angularjs.org/1.2.20/angular-route.js"></script>
-    <script src="http://code.angularjs.org/1.2.13/angular-cookies.js"></script>
+    <script src="https://code.angularjs.org/1.2.20/angular.js"></script>
+    <script src="https://code.angularjs.org/1.2.20/angular-route.js"></script>
+    <script src="https://code.angularjs.org/1.2.13/angular-cookies.js"></script>
     <script src="scripts/app.js"></script>
     <script src="modules/authentication/services.js"></script>
     <script src="modules/authentication/controller.js"></script>
