added all the controller

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <script src="scripts/app.js"></script>
     <script src="modules/authentication/services.js"></script>
     <script src="modules/authentication/controller.js"></script>
-<!--    <script src="modules/home/controllers.js"></script>-->
+    <script src="modules/home/controller.js"></script>
 </body>
 </html>
