--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html ng-app="basicHttpAuthentication">
 <head>
     <title>Angular basic Authentication</title>
+    <link rel="stylesheet" href="modules/authentication/css/auth.css">
    </head>
 <body >
-    <h1>Basic Aunthentical example</h1>
+    <h2>Basic Aunthentical example</h2>
     <div ng-view></div>
     <script src="https://code.angularjs.org/1.2.20/angular.js"></script>
     <script src="https://code.angularjs.org/1.2.20/angular-route.js"></script>
